backports-5.8-1/build.log
/home/huhan/linux-5.12-csi/backports-5.8-1/net/wireless/ibss.c: In function ‘__cfg80211_join_ibss’:
/home/huhan/linux-5.12-csi/backports-5.8-1/net/wireless/ibss.c:130:3: error: implicit declaration of function ‘kzfree’; did you mean ‘kfree’? [-Werror=implicit-function-declaration]
  130 |   kzfree(wdev->connect_keys);
      |   ^~~~~~
      |   kfree
/home/huhan/linux-5.12-csi/backports-5.8-1/net/wireless/sme.c: In function ‘__cfg80211_connect_result’:
/home/huhan/linux-5.12-csi/backports-5.8-1/net/wireless/sme.c:745:3: error: implicit declaration of function ‘kzfree’; did you mean ‘kfree’? [-Werror=implicit-function-declaration]
  745 |   kzfree(wdev->connect_keys);
      |   ^~~~~~
      |   kfree
/home/huhan/linux-5.12-csi/backports-5.8-1/net/wireless/core.c: In function ‘__cfg80211_unregister_wdev’:
/home/huhan/linux-5.12-csi/backports-5.8-1/net/wireless/core.c:1134:2: error: implicit declaration of function ‘kzfree’; did you mean ‘kvfree’? [-Werror=implicit-function-declaration]
 1134 |  kzfree(wdev->wext.keys);
      |  ^~~~~~
      |  kvfree
/home/huhan/linux-5.12-csi/backports-5.8-1/drivers/net/wireless/ath/ath9k/ar9003_csi.c: In function ‘csi_read’:
/home/huhan/linux-5.12-csi/backports-5.8-1/drivers/net/wireless/ath/ath9k/ar9003_csi.c:201:9: warning: ignoring return value of ‘copy_to_user’, declared with attribute warn_unused_result [-Wunused-result]
  201 |         copy_to_user(user_buf,tx_buf,len);                  // COPY
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/huhan/linux-5.12-csi/backports-5.8-1/net/wireless/nl80211.c:658:11: error: ‘NLA_EXACT_LEN’ undeclared here (not in a function)
  658 |   .type = NLA_EXACT_LEN,
      |           ^~~~~~~~~~~~~
/home/huhan/linux-5.12-csi/backports-5.8-1/net/wireless/util.c: In function ‘cfg80211_upload_connect_keys’:
/home/huhan/linux-5.12-csi/backports-5.8-1/net/wireless/util.c:870:2: error: implicit declaration of function ‘kzfree’; did you mean ‘kfree’? [-Werror=implicit-function-declaration]
  870 |  kzfree(wdev->connect_keys);
      |  ^~~~~~
      |  kfree
/home/huhan/linux-5.12-csi/backports-5.8-1/net/wireless/nl80211.c:706:48: error: ‘NLA_MIN_LEN’ undeclared here (not in a function)
  706 |  [NL80211_WOWLAN_TCP_DATA_PAYLOAD] = { .type = NLA_MIN_LEN, .len = 1 },
      |                                                ^~~~~~~~~~~
cc1: some warnings being treated as errors
make[6]: *** [scripts/Makefile.build:288: /home/huhan/linux-5.12-csi/backports-5.8-1/net/wireless/ibss.o] Error 1
make[6]: *** Waiting for unfinished jobs....
/home/huhan/linux-5.12-csi/backports-5.8-1/net/wireless/nl80211.c: In function ‘nl80211_join_ibss’:
/home/huhan/linux-5.12-csi/backports-5.8-1/net/wireless/nl80211.c:9842:4: error: implicit declaration of function ‘kzfree’; did you mean ‘kvfree’? [-Werror=implicit-function-declaration]
 9842 |    kzfree(connkeys);
      |    ^~~~~~
      |    kvfree
cc1: some warnings being treated as errors
make[6]: *** [scripts/Makefile.build:287: /home/huhan/linux-5.12-csi/backports-5.8-1/net/wireless/sme.o] Error 1
cc1: some warnings being treated as errors
make[6]: *** [scripts/Makefile.build:287: /home/huhan/linux-5.12-csi/backports-5.8-1/net/wireless/core.o] Error 1
/home/huhan/linux-5.12-csi/backports-5.8-1/net/mac80211/aead_api.c: In function ‘aead_encrypt’:
/home/huhan/linux-5.12-csi/backports-5.8-1/net/mac80211/aead_api.c:44:2: error: implicit declaration of function ‘kzfree’; did you mean ‘kfree’? [-Werror=implicit-function-declaration]
   44 |  kzfree(aead_req);
      |  ^~~~~~
      |  kfree
cc1: some warnings being treated as errors
make[6]: *** [scripts/Makefile.build:287: /home/huhan/linux-5.12-csi/backports-5.8-1/net/mac80211/aead_api.o] Error 1
make[6]: *** Waiting for unfinished jobs....
/home/huhan/linux-5.12-csi/backports-5.8-1/net/wireless/wext-sme.c: In function ‘cfg80211_mgd_wext_connect’:
/home/huhan/linux-5.12-csi/backports-5.8-1/net/wireless/wext-sme.c:60:3: error: implicit declaration of function ‘kzfree’; did you mean ‘kfree’? [-Werror=implicit-function-declaration]
   60 |   kzfree(ck);
      |   ^~~~~~
      |   kfree
cc1: some warnings being treated as errors
make[6]: *** [scripts/Makefile.build:287: /home/huhan/linux-5.12-csi/backports-5.8-1/net/wireless/util.o] Error 1
cc1: some warnings being treated as errors
make[6]: *** [scripts/Makefile.build:288: /home/huhan/linux-5.12-csi/backports-5.8-1/net/wireless/nl80211.o] Error 1
cc1: some warnings being treated as errors
make[6]: *** [scripts/Makefile.build:289: /home/huhan/linux-5.12-csi/backports-5.8-1/net/wireless/wext-sme.o] Error 1
/home/huhan/linux-5.12-csi/backports-5.8-1/drivers/net/wireless/ath/ath9k/init.c: In function ‘ath9k_reg_rmw’:
/home/huhan/linux-5.12-csi/backports-5.8-1/drivers/net/wireless/ath/ath9k/init.c:233:2: warning: parameter names (without types) in function declaration
  233 |  unsigned long uninitialized_var(flags);
      |  ^~~~~~~~
In file included from ./include/linux/kernel.h:15,
                 from /home/huhan/linux-5.12-csi/backports-5.8-1/backport-include/linux/kernel.h:3,
                 from ./arch/x86/include/asm/percpu.h:27,
                 from ./arch/x86/include/asm/current.h:6,
                 from ./include/linux/sched.h:12,
                 from ./include/linux/ratelimit.h:6,
                 from ./include/linux/dev_printk.h:16,
                 from ./include/linux/device.h:15,
                 from /home/huhan/linux-5.12-csi/backports-5.8-1/backport-include/linux/device.h:4,
                 from ./include/linux/dma-mapping.h:7,
                 from /home/huhan/linux-5.12-csi/backports-5.8-1/backport-include/linux/dma-mapping.h:3,
                 from /home/huhan/linux-5.12-csi/backports-5.8-1/drivers/net/wireless/ath/ath9k/init.c:19:
/home/huhan/linux-5.12-csi/backports-5.8-1/drivers/net/wireless/ath/ath9k/init.c:237:40: error: ‘flags’ undeclared (first use in this function)
  237 |   spin_lock_irqsave(&sc->sc_serial_rw, flags);
      |                                        ^~~~~
./include/linux/typecheck.h:11:9: note: in definition of macro ‘typecheck’
   11 |  typeof(x) __dummy2; \
      |         ^
./include/linux/spinlock.h:384:2: note: in expansion of macro ‘raw_spin_lock_irqsave’
  384 |  raw_spin_lock_irqsave(spinlock_check(lock), flags); \
      |  ^~~~~~~~~~~~~~~~~~~~~
/home/huhan/linux-5.12-csi/backports-5.8-1/drivers/net/wireless/ath/ath9k/init.c:237:3: note: in expansion of macro ‘spin_lock_irqsave’
  237 |   spin_lock_irqsave(&sc->sc_serial_rw, flags);
      |   ^~~~~~~~~~~~~~~~~
/home/huhan/linux-5.12-csi/backports-5.8-1/drivers/net/wireless/ath/ath9k/init.c:237:40: note: each undeclared identifier is reported only once for each function it appears in
  237 |   spin_lock_irqsave(&sc->sc_serial_rw, flags);
      |                                        ^~~~~
./include/linux/typecheck.h:11:9: note: in definition of macro ‘typecheck’
   11 |  typeof(x) __dummy2; \
      |         ^
./include/linux/spinlock.h:384:2: note: in expansion of macro ‘raw_spin_lock_irqsave’
  384 |  raw_spin_lock_irqsave(spinlock_check(lock), flags); \
      |  ^~~~~~~~~~~~~~~~~~~~~
/home/huhan/linux-5.12-csi/backports-5.8-1/drivers/net/wireless/ath/ath9k/init.c:237:3: note: in expansion of macro ‘spin_lock_irqsave’
  237 |   spin_lock_irqsave(&sc->sc_serial_rw, flags);
      |   ^~~~~~~~~~~~~~~~~
./include/linux/typecheck.h:12:18: warning: comparison of distinct pointer types lacks a cast
   12 |  (void)(&__dummy == &__dummy2); \
      |                  ^~
./include/linux/spinlock.h:251:3: note: in expansion of macro ‘typecheck’
  251 |   typecheck(unsigned long, flags); \
      |   ^~~~~~~~~
./include/linux/spinlock.h:384:2: note: in expansion of macro ‘raw_spin_lock_irqsave’
  384 |  raw_spin_lock_irqsave(spinlock_check(lock), flags); \
      |  ^~~~~~~~~~~~~~~~~~~~~
/home/huhan/linux-5.12-csi/backports-5.8-1/drivers/net/wireless/ath/ath9k/init.c:237:3: note: in expansion of macro ‘spin_lock_irqsave’
  237 |   spin_lock_irqsave(&sc->sc_serial_rw, flags);
      |   ^~~~~~~~~~~~~~~~~
make[8]: *** [scripts/Makefile.build:287: /home/huhan/linux-5.12-csi/backports-5.8-1/drivers/net/wireless/ath/ath9k/init.o] Error 1
make[8]: *** Waiting for unfinished jobs....
make[5]: *** [scripts/Makefile.build:518: /home/huhan/linux-5.12-csi/backports-5.8-1/net/mac80211] Error 2
make[5]: *** Waiting for unfinished jobs....
make[7]: *** [scripts/Makefile.build:518: /home/huhan/linux-5.12-csi/backports-5.8-1/drivers/net/wireless/ath/ath9k] Error 2
make[6]: *** [scripts/Makefile.build:518: /home/huhan/linux-5.12-csi/backports-5.8-1/drivers/net/wireless/ath] Error 2
make[5]: *** [scripts/Makefile.build:518: /home/huhan/linux-5.12-csi/backports-5.8-1/drivers/net/wireless] Error 2
make[5]: *** [scripts/Makefile.build:518: /home/huhan/linux-5.12-csi/backports-5.8-1/net/wireless] Error 2
make[4]: *** [Makefile:1848: /home/huhan/linux-5.12-csi/backports-5.8-1] Error 2
make[3]: *** [Makefile.build:13: modules] Error 2
make[2]: *** [Makefile.real:88: modules] Error 2
make[1]: *** [Makefile:43: modules] Error 2
make: *** [Makefile:30: default] Error 2
